# hvps

./: .gitignore
Code/C++/HVPSController2/main/: CMakeLists.txt  HVPSController.cpp
Code/C++/HVPSController2/main/Broadcasting/: LiveDataBroadcaster.cpp  LiveDataBroadcaster.hpp
Code/C++/HVPSController2/main/ControllerCore/: HighSpeedCore.cpp  HighSpeedCore.hpp  Sampling.cpp  Sampling.hpp  SystemChecks.cpp  SystemChecks.hpp  SystemChecksResult.cpp  SystemChecksResult.hpp  ThresholdController.cpp  ThresholdController.hpp
Code/C++/HVPSController2/main/Graphics/: HVPSLEDDisplay.cpp  HVPSLEDDisplay.hpp  LEDStrip.cpp  LEDStrip.hpp
Code/C++/HVPSController2/main/Guids/: BluetoothUUIDHelper.cpp
Code/C++/HVPSController2/main/IO/: ADCChannels.cpp  ADCChannels.hpp  HVPSFPGABus.cpp  HVPSFPGABus.hpp  Inputs.cpp  Inputs.hpp  Outputs.cpp  Outputs.hpp  PinDefinitions.hpp  PowerConditioningMonitor.cpp  PowerConditioningMonitor.hpp
Code/C++/HVPSController2/main/Peripherals/: Addresses.cpp  Addresses.hpp  LocalUI.cpp  LocalUI.hpp
Code/C++/HVPSController2/main/Ports/: Port_ControllingMachine.cpp  Port_ControllingMachine.hpp
Code/C++/HVPSController2/main/Temperature/: MOSFETTemperatureSensor.cpp  MOSFETTemperatureSensor.hpp  TemperatureSensor.hpp
Code/C++/Shared/: CMakeLists.txt
Code/C++/Shared/ADC/: ADC.cpp  ADC.hpp  ADCOneShot.cpp  ADCOneShot.hpp  ADCOneShotSession.hpp  ADCSession.hpp  IADCSession.hpp  IMonitorCurrentAndPowerHandle.hpp  MonitorCurrentAndPowerHandle.cpp  MonitorCurrentAndPowerHandle.hpp  MonitorVoltageThresholdHandle.cpp  MonitorVoltageThresholdHandle.hpp  ReverseVoltageToRawLookup.cpp  ReverseVoltageToRawLookup.hpp
Code/C++/Shared/Communication/: DuplexChannel.cpp  DuplexChannel.hpp
Code/C++/Shared/Communication/Bluetooth/: BluetoothUUID.cpp  Bluetooth_BLE.cpp  Bluetooth_BR_EDR.cpp  Bluetooth_BR_EDR.hpp
Code/C++/Shared/Communication/Enums/: ChannelType.hpp  MessageIntegrity.hpp
Code/C++/Shared/Communication/Events/: ChannelEventArgs.hpp  ChannelEvents.cpp  ChannelEvents.hpp
Code/C++/Shared/Communication/FiberOptic/: TOSLINKDuplexChannel.cpp  TOSLINKDuplexChannel.hpp
Code/C++/Shared/Communication/I2C/: I2C.cpp  I2C.hpp  example.txt
Code/C++/Shared/Communication/Interfaces/: IChannel.hpp  IChannelEvents.hpp  IDuplexChannel.hpp  IIncomingMessageHandler.hpp
Code/C++/Shared/Communication/MRT/: MRTChannel.cpp  MRTChannel.hpp  MRTDuplexChannel.cpp  MRTDuplexChannel.hpp  MRTSymbol.hpp
Code/C++/Shared/Components/: BoardLED.cpp  BoardLED.hpp
Code/C++/Shared/Core/: ArrayHelper.cpp  ArrayHelper.hpp  FloatAndTime.hpp  Latch.cpp  Latch.hpp  Macros.hpp  RingBuffer.cpp  RingBuffer.hpp  SingletonBase.hpp
Code/C++/Shared/DAC/: DAC.cpp  DAC.hpp
Code/C++/Shared/Debugging/: DebugHelper.cpp  DebugHelper.hpp
Code/C++/Shared/Encoding/: Base64.cpp  Base64.hpp
Code/C++/Shared/Enums/: ErrorType.hpp  SampleType.hpp  SubsystemIdentifiers.hpp  SystemState.hpp  ValueBoundType.hpp
Code/C++/Shared/FPGA/: FPGABus.cpp  FPGABus.hpp  FPGAInterface.cpp  FPGAInterface.hpp  IFPGABus.hpp  LockedFPGAInterface.cpp  LockedFPGAInterface.hpp
Code/C++/Shared/Graphics/: DisplayBuffer.cpp  DisplayBuffer.hpp  PixelHelper.cpp  PixelHelper.hpp
Code/C++/Shared/IO/: IOHelper.cpp  IOHelper.hpp  IOInteruptHelper.cpp  IOInteruptHelper.hpp  IOutputs.hpp
Code/C++/Shared/Interfaces/: IVoltageSource.hpp
Code/C++/Shared/JSON/: JHelper.cpp  JHelper.hpp  JHelper.tpp
Code/C++/Shared/Logging/: Log.hpp
Code/C++/Shared/Macros/: GetFileName.hpp  IncludeLineOnEnd.hpp  IncludeLineOnEndHelper.cpp
Code/C++/Shared/Messaging/: MessageConstants.hpp
Code/C++/Shared/Storage/: Flash.cpp  Flash.hpp  Flash.tpp
Code/C++/Shared/Structs/: VoltageWithRaw.cpp  VoltageWithRaw.hpp  VoltageWithRawAndTime.cpp  VoltageWithRawAndTime.hpp
Code/C++/Shared/System/: AbortReporter.hpp  Aborter.cpp  Aborter.hpp  BacktraceHelper.cpp  BacktraceHelper.hpp  CrashReporter.hpp  MemoryHelper.cpp  MemoryHelper.hpp  PerformanceProfiler.cpp  SafeAbort.hpp  StackSamplerHelper.hpp  StayTheFuckAwake.cpp  StayTheFuckAwake.hpp  SubsystemIdentifier.cpp  SubsystemIdentifier.hpp  old onPanic.txt
Code/C++/Shared/Tasks/: TaskFactory.cpp  TaskFactory.hpp  TransientWorker.cpp  TransientWorker.hpp
Code/C++/Shared/Temperature/: TemperatureMonitor.cpp  TemperatureMonitor.hpp  TemperatureSensorAndLimit.cpp  TemperatureSensorAndLimit.hpp
Code/C++/Shared/Ticketing/: TicketedSender.cpp  TicketedSender.hpp
Code/C++/Shared/Timing/: CPUClockFrequencyHelper.cpp  CPUClockFrequencyHelper.hpp  Delay.cpp  Delay.hpp  FrequencyMeter.cpp  FrequencyMeter.hpp  InterruptTimer.cpp  InterruptTimer.hpp  TimeHelper.cpp  TimeHelper.hpp  Timer.cpp  Timer.hpp  TimerInteruptHandle.cpp  TimerInteruptHandle.hpp  TimerInteruptHelper.cpp  TimerInteruptHelper.hpp  TimerSimple.cpp  TimerSimple.hpp
Code/C++/Shared/Watchdog/: Watchdog.cpp  Watchdog.hpp  WatchdogCollection.cpp  WatchdogCollection.hpp  WatchdogsAndSize.cpp  WatchdogsAndSize.hpp
Spreadsheets/: 4kV.xlsx  (+2 more)
(+390 files in other folders)
