idf_component_register(
    SRCS 
	"ADC/ADC.cpp"
	"ADC/ADCOneShot.cpp"
	"ADC/MonitorVoltageThresholdHandle.cpp"
	"ADC/MonitorCurrentAndPowerHandle.cpp"
	"ADC/ReverseVoltageToRawLookup.cpp"
	"cJSON/cJSON.c"
	"Communication/FiberOptic/TOSLINKDuplexChannel.cpp"
	"Communication/UART/UARTDuplexChannel.cpp"
	"Communication/UART/UARTBase.cpp"
	"Communication/UART/HardwareUART.cpp"
	"Communication/UART/SoftwareUART.cpp"
	"Communication/Bluetooth/Bluetooth_BR_EDR.cpp"
	"Communication/Events/ChannelEvents.cpp"
	"Communication/I2C/I2C.cpp"
	"Communication/I2C/I2CConfiguration.cpp"
	"Communication/RMT/HardwareRMT.cpp"
	"Communication/RMT/RMTDuplexChannel.cpp"
	"Communication/MRT/MRTChannel.cpp"
	"Communication/MRT/MRTDuplexChannel.cpp"
	"Communication/DuplexChannel.cpp"
	"Components/TemperatureSensors/LM75A.cpp"
	"Components/TemperatureSensors/DHT22.cpp"
	"Components/Accelerometers/MPU6050.cpp"
	"Components/Core/dht.c"
	"Core/CancellationToken.cpp"
	"Core/Checksums/Crc32.cpp"
	"Core/CleanupBucket.cpp"
	"Core/Latch.cpp"
	"Core/RefCounted.cpp"
	"Core/RingBuffer.cpp"
	"DAC/DAC.cpp"
	"Encoding/Base64.cpp"
	"IO/IOHelper.cpp"
	"IO/IOInteruptHelper.cpp"
	"JSON/CJsonRAII.cpp"
	"JSON/JHelper.cpp"
	"Logging/Log.cpp"
	"Macros/IncludeLineOnEndHelper.cpp"
	"Storage/Flash.cpp"
	"System/Aborter.cpp"
	"System/BacktraceHelper.cpp"
	"System/MemoryHelper.cpp"
	"System/StayTheFuckAwake.cpp"
	"System/SubsystemIdentifier.cpp"
	"Tasks/TaskFactory.cpp"
	"Tasks/TransientWorker.cpp"
	"Temperature/TemperatureSensorAndLimit.cpp"
	"Temperature/TemperatureMonitor.cpp"
	"Ticketing/TicketedSender.cpp"
	"Ticketing/TicketedSender.cpp"
	"Ticketing/TicketedSenderHandle.cpp"
	"Ticketing/TicketSource.cpp"
	"Timing/CPUClockFrequencyHelper.cpp"
	"Timing/Delay.cpp"
	"Timing/FrequencyMeter.cpp"
	"Timing/Timer.cpp"
	"Timing/TimeHelper.cpp"
	"Timing/TimerSimple.cpp"
	"Timing/InterruptTimer.cpp"
	"Timing/HardwareTimerPool/HardwareTimerPool.cpp"
	"Timing/HardwareTimerPool/HardwareTimerLease.cpp"
	"Timing/HardwareTimerPool/HardwareTimerInfo.cpp"
	"FPGA/FPGABus.cpp"
	"FPGA/FPGAInterface.cpp"
	"FPGA/LockedFPGAInterface.cpp"
	"Generated/Messages/ConsoleMessage.cpp"
	"Generated/Messages/GetVoltageRequest.cpp"
	"Generated/Messages/GetVoltageResponse.cpp"
	"Generated/Messages/GreetingMessage.cpp"
	"Generated/Messages/GreetingRequest.cpp"
	"Generated/Messages/GreetingResponse.cpp"
	"Generated/Messages/StateChangedMessage.cpp"
	"Generated/Messages/LiveDataMessage.cpp"
	"Generated/Messages/RunSystemChecksOnlyMessage.cpp"
	"Generated/Messages/StartMessage.cpp"
	"Generated/Messages/StopMessage.cpp"
	"Generated/Messages/ShutDownMessage.cpp"
	"Generated/Messages/PingMessage.cpp"
	"Generated/Messages/ErrorMessage.cpp"
	"Generated/Messages/SendStateToIndicateMessage.cpp"
	"Generated/Messages/IndicateStateMessage.cpp"
	"Generated/Messages/IndicateStateRequest.cpp"
	"Generated/Messages/IndicateStateResponse.cpp"
	"Generated/Messages/SendStateToIndicateMessage.cpp"
	"Generated/Messages/SendStateToIndicateMessage.cpp"
	"Generated/Messages/SetForceVoltageThresholdReachedFeedbackRequest.cpp"
	"Generated/Messages/SetForceVoltageThresholdReachedFeedbackResponse.cpp"
	"Generated/Messages/SetVoltageThresholdRequest.cpp"
	"Generated/Messages/SetVoltageThresholdResponse.cpp"
	"Generated/Messages/VoltageMessage.cpp"
	"Generated/Messages/CoreDumpSummaryMessage.cpp"
	"Generated/Messages/LastAbortMessage.cpp"
	"Generated/Messages/ClearLoggedErrorsMessage.cpp"
	"Generated/Messages/SampleDataMessage.cpp"
	"Generated/Messages/SampleHalfCycleMessage.cpp"
	"Generated/Messages/SampleFullCycleMessage.cpp"
	"Generated/Messages/CalculateInductanceMessage.cpp"
	"Graphics/DisplayBuffer.cpp"
	"Graphics/PixelHelper.cpp"
	"Structs/VoltageWithRaw.cpp"
	"Structs/VoltageWithRawAndTime.cpp"
	"Watchdog/Watchdog.cpp"
	"Watchdog/WatchdogCollection.cpp"
	"Watchdog/WatchdogsAndSize.cpp"
    PRIV_REQUIRES spi_flash driver bt nvs_flash esp_adc
	REQUIRES
		espcoredump
    INCLUDE_DIRS
        "."       # lets you #include "Core/Event.hpp" or "Utils/Foo.hpp"
)
